<resources>
    <string name="app_name">ConnectToMySQL</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="contrasenya_usuario">Contraseña Usuario</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenya">Contraseña</string>
    <string name="boton_login">Loguearse</string>
    <string name="lista_farms">Listar farms</string>
    <string name="display_farm">Ver farm</string>
    <string name="nombre_farm">Nombre: </string>
    <string name="latitude_farm">Latitud: </string>
    <string name="longitude_farm">Longitud: </string>
    <string name="location_farm">Localización: </string>
    <string name="editar">Editar</string>
    <string name="aceptar">Aceptar</string>
    <string name="crear">Crear</string>
    <string name="lista_plots">Listar plots</string>
    <string name="nombre_plot">Nombre: </string>
    <string name="bomba_activada">Bomba de agua: </string>
    <string name="display_plot">Ver plot</string>
    <string name="display_climalogical_probe">Ver autoriego</string>
    <string name="moisture_lower_limit">Límite inferior humedad suelo: </string>
    <string name="moisture_upper_limit">Límite superior humedad suelo: </string>
    <string name="humidity_lower_limit">Límite inferior humedad ambiente: </string>
    <string name="humidity_upper_limit">Límite superior humedad ambiente: </string>
    <string name="temperature_lower_limit">Límite inferior temperatura ambiente: </string>
    <string name="temperature_upper_limit">Límite superior temperatura ambiente: </string>
    <string name="active_climatological_probe">Activar auto riego: </string>
    <string name="ver_clima">Ver climatología</string>
    <string name="ver_historico">Ver histórico</string>
    <string name="borrar_historico">Borrar histórico</string>
    <string name="fecha">Fecha: </string>
    <string name="duracion">Duracion: </string>
    <string name="manuales">Riegos manuales: </string>
    <string name="todos_los_dias_list">Riegos todos los dias: </string>
    <string name="algunos_dias_list">Riegos algunos dias: </string>
    <string name="riegos">Riegos</string>
    <string name="fechaInicio">Fecha de inicio:</string>
    <string name="fechaFin">Fecha de fin: </string>
    <string name="hora">Hora: </string>
    <string name="minuto">Minuto: </string>
    <string name="cancelMoment">Cancelado: </string>
    <string name="cancelado">Cancelado: </string>
    <string name="ver_riego">Ver riego</string>
    <string name="cancelar">Cancelar</string>
    <string name="momentDay">Riegos</string>
</resources>
