<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_farm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ruben.connecttomysql.farm.DisplayFarmActivity">

    <TextView
        android:text="@string/ver_riego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView27"
        android:layout_toEndOf="@+id/textView27"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/textView29" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView27"
        android:layout_alignLeft="@+id/textView29"
        android:layout_alignStart="@+id/textView29"
        android:id="@+id/textView31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView30"
        android:layout_above="@+id/textView27"
        android:layout_alignLeft="@+id/textView31"
        android:layout_alignStart="@+id/textView31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView28"
        android:layout_alignLeft="@+id/textView31"
        android:layout_alignStart="@+id/textView31"
        android:id="@+id/textView32" />

    <TextView
        android:text="@string/hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView28"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:id="@+id/textView33" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView33"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32"
        android:id="@+id/textView34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView35"
        android:layout_alignLeft="@+id/textView34"
        android:layout_alignStart="@+id/textView34"
        android:id="@+id/textView36" />

    <TextView
        android:text="@string/nombre_farm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/cancelMoment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fechaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/textView27"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fechaFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/textView28"
        android:layout_below="@+id/textView27"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/minuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView35"
        android:layout_below="@+id/textView33"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView38"
        android:layout_alignLeft="@+id/textView36"
        android:layout_alignStart="@+id/textView36"
        android:id="@+id/textView39" />

    <Button
        android:text="@string/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView39"
        android:layout_alignStart="@+id/textView39" />

    <TextView
        android:text="@string/duracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView38"
        android:layout_below="@+id/textView35"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <Button
        android:text="@string/editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button13"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
