<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_climatological_probe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ruben.connecttomysql.climatologicalProbe.DisplayClimatologicalProbeActivity">

    <TextView
        android:text="@string/moisture_lower_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:id="@+id/textViewSoilLowerLimit" />

    <TextView
        android:text="@string/moisture_upper_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSoilLowerLimit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:id="@+id/textViewSoilUpperLimit" />

    <Button
        android:text="@string/editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonEditarClimatologicalProbe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewSoilLowerLimit"
        android:layout_toRightOf="@+id/textViewSoilUpperLimit"
        android:layout_toEndOf="@+id/textViewSoilUpperLimit"
        android:id="@+id/textViewSoilLowerLimitTv" />

    <Switch
        android:text="@string/active_climatological_probe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/switchActiveClimatologicalProbe"
        android:layout_below="@+id/textViewSoilUpperLimit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSoilUpperLimitTv"
        android:layout_alignBaseline="@+id/textViewSoilUpperLimit"
        android:layout_alignBottom="@+id/textViewSoilUpperLimit"
        android:layout_toRightOf="@+id/textViewSoilLowerLimitTv"
        android:layout_toEndOf="@+id/textViewSoilLowerLimitTv"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

</RelativeLayout>
